[Squash] Add mining cab + Fix H3 metrics

--- a/src/css/Agenda.css
+++ b/src/css/Agenda.css
@@ -77,8 +77,9 @@
 
 .agenda .schedule .day .last {
     position: absolute;
+    top: 50%;
     right: 50%;
-    transform: translateX(-5rem) scale(2);
+    transform: translateX(-5rem) translateY(-50%) scale(2);
 }
 
 .agenda .schedule .day h3 {
@@ -91,8 +92,9 @@
 
 .agenda .schedule .day .next {
     position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translateX(5rem) scale(2);
+    transform: translateX(5rem) translateY(-50%) scale(2);
 }
 
 .agenda .schedule .events-container {
